--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,118 @@
 version: "3.8"
 
 services:
+  # ----------------------------
+  # Redis
+  # ----------------------------
   redis:
     image: redis:7
+    container_name: redis
     ports:
       - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
+  # ----------------------------
+  # Zookeeper
+  # ----------------------------
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    healthcheck:
+      test: ["CMD", "echo", "ruok", "|", "nc", "-w", "5", "localhost", "2181"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
+  # ----------------------------
+  # Kafka
+  # ----------------------------
   kafka:
     image: confluentinc/cp-kafka:7.4.0
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    volumes:
+      - kafka-data:/var/lib/kafka/data
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "kafka:9092", "--list"]
+      interval: 15s
+      timeout: 5s
+      retries: 10
 
+  # ----------------------------
+  # Rate Limiter
+  # ----------------------------
   rate-limiter:
     build: ./rate-limiter
+    container_name: rate-limiter
     depends_on:
-      - redis
-      - kafka
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
     ports:
       - "8080:8080"
+    environment:
+      REDIS_HOST: redis
+      KAFKA_BROKER: kafka:9092
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
+  # ----------------------------
+  # Analytics Worker
+  # ----------------------------
   analytics-worker:
     build: ./analytics-worker
+    container_name: analytics-worker
     depends_on:
-      - kafka
-      - redis
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
+  # ----------------------------
+  # Gateway
+  # ----------------------------
   gateway:
     build: ./gateway
+    container_name: gateway
+    depends_on:
+      rate-limiter:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - "3000:3000"
-    depends_on:
-      - rate-limiter
-      - redis
+    environment:
+      REDIS_HOST: redis
+      RATE_LIMITER_URL: http://rate-limiter:8080
+
+# ----------------------------
+# Named Volumes
+# ----------------------------
+volumes:
+  redis-data:
+  kafka-data:
