--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -2,11 +2,16 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json .
+# Copy package.json and package-lock.json for caching
+COPY package*.json ./
+
 RUN npm install
 
+# Copy source code
 COPY . .
 
-RUN npm run build || true
+# Build TypeScript
+RUN npm run build
 
-CMD ["node", "src/index.ts"]
+# Run compiled JS
+CMD ["npm", "run", "start"]
