--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,6 +4,15 @@
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "redis": "^4.6.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   }
 }
